--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toBottomOf="@+id/createUserNameText" />
 
     <EditText
-        android:id="@+id/createPassordText"
+        android:id="@+id/createPasswordText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
@@ -63,7 +63,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createPassordText" />
+        app:layout_constraintTop_toBottomOf="@+id/createPasswordText" />
 
     <ImageView
         android:id="@+id/createAvatarImageView"
